# scatter-slots

./: .dockerignore  .gitignore  10m_chart_old.py  3_lucky_piggy_log.csv  Dockerfile  GameConfigs = {.py  README.md  agent_ace_log.csv  ali_baba_log.csv  apache.config  api.py  api.sh  api_5s.py  api_interval.sh  api_restart.sh  asgardian_rising_log.csv  aztec_priestess_log.csv  bonus_hunter_log.csv  boxing_king_log.csv  breakout_data.json  breakout_data_test.json  buffalo_king_untamed_megaways™_log.csv  build.py  build.sh  build_app.py  candy_baby_log.csv  captain's_bounty_log.csv  chart.py  charts.sh  close_charts.sh  cocktail_nights_log.csv  config.py  crazy777_log.csv  cricket_king_18_log.csv  cricket_sah_75_log.csv  cruise_royale_log.csv  crypto_gold_log.csv  current_game.txt  dashboard.py  dashboard_new.py  (+136 more)
chrome_profile_1/: DevToolsActivePort  Local State  first_party_sets.db
chrome_profile_1/GrShaderCache/: data_1  index
chrome_profile_1/GraphiteDawnCache/: data_1  index
chrome_profile_1/Profile_3 coin treasures/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
chrome_profile_1/Profile_3 lucky piggy/: BrowsingTopicsState  Cookies  DIPS-wal  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
chrome_profile_1/Profile_5 rabbits megaways™/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  (+6 more)
chrome_profile_2/: DevToolsActivePort  Local State  first_party_sets.db
(+6646 files in other folders)
